[gd_scene load_steps=5 format=3 uid="uid://cudrg5ejo7f0b"]

[ext_resource type="Script" uid="uid://dnhekth7y3w6j" path="res://start_menu.gd" id="1_jwbto"]

[sub_resource type="Animation" id="Animation_ia0g5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("players:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("start:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jwbto"]
resource_name = "start"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("players:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("start:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vpdu5"]
_data = {
&"RESET": SubResource("Animation_ia0g5"),
&"start": SubResource("Animation_jwbto")
}

[node name="start menu" type="Node2D"]
script = ExtResource("1_jwbto")

[node name="players" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_left = 224.0
offset_top = 104.0
offset_right = 672.0
offset_bottom = 153.0

[node name="2" type="Button" parent="players"]
layout_mode = 0
offset_left = 352.0
offset_right = 448.0
offset_bottom = 48.0
disabled = true
text = "2 Player"

[node name="1" type="Button" parent="players"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 48.0
disabled = true
text = "1 Player"

[node name="start" type="Button" parent="."]
offset_left = 408.0
offset_top = 104.0
offset_right = 488.0
offset_bottom = 153.0
text = "Start"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vpdu5")
}

[node name="language selector" type="OptionButton" parent="."]
offset_left = 384.0
offset_top = 192.0
offset_right = 512.0
offset_bottom = 232.0
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "Espa√±ol"
popup/item_1/id = 1
popup/item_2/text = "Norsk"
popup/item_2/id = 2

[connection signal="pressed" from="players/1" to="." method="_on_players_pressed" binds= ["1"]]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="item_selected" from="language selector" to="." method="_on_language_selector_item_selected"]
